--- a/recruit-gui/src/app/candidate-profile/candidate-profile.component.css
+++ b/recruit-gui/src/app/candidate-profile/candidate-profile.component.css
@@ -152,6 +152,7 @@ table tr th{
 .details-left{
 	float:left;
 	margin-bottom:50px;
+	margin-right:20px;
 }
 
 .details-left-collections{
@@ -204,4 +205,35 @@ table tr th{
 textarea {
     width:100%;
     height:200px;
+}
+
+.details-left h3{
+	color:#6A5ACD;
+	background:white;
+	border-bottom:2px black solid;
+}
+
+.left-info-box{
+	width:100%;
+	background:#e8e8e8;
+	padding:10px;
+	margin-bottom:20px;
+}
+
+.details-left p{
+	color:black;
+	font-weight:bold;
+}
+
+.details-right{
+	float:left;
+	width:75%;
+}
+
+.details-right h1{
+	background:#6A5ACD; 
+	width:100%;
+	margin-bottom:10px;
+	padding:20px;
+	margin-left:0px;
 }
