--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -206,8 +206,8 @@
 				<span style="font-size:300px;color:green;">person</span>
 			</div>
 			<br>
-			<br *ngIf="candidateProfile.introduction.length != 0">
-			<button class="btn btn-secondary action-btn main-action_btn main-btns main-btn" *ngIf="candidateProfile.introduction.length != 0" style="width:300px;margin-bottom:10px;background:green;" (click)="contactCandidate(contactBox)">Contact</button>
+			<br>
+			<button class="btn btn-secondary action-btn main-action_btn main-btns main-btn" style="width:300px;margin-bottom:10px;background:green;" (click)="contactCandidate(contactBox)">Contact</button>
 			<br>
 			<div>
 				<h3>Location</h3>
