terms and conditions upgrage

--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -107,8 +107,8 @@
 		</p>
 		<h5>Data Retention Candidates</h5>
 		<p>
-		Candidates information will be stored for a maximum of two years before their consent is requested again. The candidate can request as any point to have their data removed from the site. When 
-		a Candidate requests their data be removed all identifiable references to the Candidate will either be removed or replaced. This update will be periodic but the we will make best endevours to make these updates as quickly as possible.
+		Candidates whose profiles have been accepted will receive login details for their Candidate account. Their account and profile will remain in the system up until the point they delete their profile. 
+		Candidates may also email the site administrator and request their details are removed from the site. 
 		</p>
 	</div>
 	
